--- a/MacDown/Localization/Base.lproj/MainMenu.xib
+++ b/MacDown/Localization/Base.lproj/MainMenu.xib
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9532"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11762"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -610,7 +610,11 @@ DQ
                 </menuItem>
             </items>
         </menu>
-        <customObject id="eq0-c4-vgQ" customClass="MPMainController"/>
+        <customObject id="eq0-c4-vgQ" customClass="MPMainController">
+            <connections>
+                <outlet property="pluginController" destination="N0l-eA-KkD" id="Mlj-fb-sdY"/>
+            </connections>
+        </customObject>
         <customObject id="Zfp-OK-9bN" customClass="SUUpdater">
             <connections>
                 <outlet property="delegate" destination="eq0-c4-vgQ" id="UJV-6a-eCL"/>
