Terminal preferences outlets

--- a/MacDown/Code/Preferences/MPTerminalPreferencesViewController.xib
+++ b/MacDown/Code/Preferences/MPTerminalPreferencesViewController.xib
@@ -8,6 +8,10 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="MPTerminalPreferencesViewController">
             <connections>
+                <outlet property="installUninstallButton" destination="XPb-kl-BjV" id="eQ9-92-EZZ"/>
+                <outlet property="location" destination="oUF-aA-NID" id="FyW-H9-BR9"/>
+                <outlet property="supportIndicator" destination="GyN-lb-9B9" id="7m6-is-i6W"/>
+                <outlet property="supportText" destination="QYt-FS-lHh" id="BxH-WN-ofa"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
             </connections>
         </customObject>
