--- a/MacDown/Code/Preferences/MPTerminalPreferencesViewController.xib
+++ b/MacDown/Code/Preferences/MPTerminalPreferencesViewController.xib
@@ -18,11 +18,11 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="360" height="239"/>
+            <rect key="frame" x="0.0" y="0.0" width="360" height="172"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="GyN-lb-9B9">
-                    <rect key="frame" x="18" y="208" width="16" height="17"/>
+                    <rect key="frame" x="18" y="141" width="16" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="●" id="Me9-q2-eWj">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" red="0.85418030104712039" green="0.1825584292949374" blue="0.084069592693772122" alpha="0.84999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
@@ -30,7 +30,7 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="QYt-FS-lHh">
-                    <rect key="frame" x="33" y="208" width="175" height="17"/>
+                    <rect key="frame" x="33" y="141" width="175" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Shell support not installed" id="g7m-Fr-pUo">
                         <font key="font" metaFont="systemBold"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -38,7 +38,7 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="jXn-KV-WQB">
-                    <rect key="frame" x="20" y="149" width="324" height="51"/>
+                    <rect key="frame" x="20" y="82" width="324" height="51"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="320" id="4IK-PY-Scf"/>
                     </constraints>
@@ -49,7 +49,7 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="jQ4-bt-VFs">
-                    <rect key="frame" x="30" y="118" width="60" height="17"/>
+                    <rect key="frame" x="30" y="51" width="60" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Location:" id="EJe-0p-X4m">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -57,7 +57,7 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="oUF-aA-NID">
-                    <rect key="frame" x="91" y="118" width="110" height="17"/>
+                    <rect key="frame" x="91" y="51" width="110" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="&lt;binary location&gt;" id="0H2-qZ-OjP">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -65,7 +65,7 @@
                     </textFieldCell>
                 </textField>
                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="XPb-kl-BjV">
-                    <rect key="frame" x="87" y="80" width="76" height="32"/>
+                    <rect key="frame" x="87" y="13" width="76" height="32"/>
                     <buttonCell key="cell" type="push" title="Install" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="XiC-FP-TWZ">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
@@ -82,6 +82,7 @@
                 <constraint firstItem="jQ4-bt-VFs" firstAttribute="top" secondItem="jXn-KV-WQB" secondAttribute="bottom" constant="14" id="bB7-Xp-SXw"/>
                 <constraint firstItem="QYt-FS-lHh" firstAttribute="leading" secondItem="GyN-lb-9B9" secondAttribute="trailing" constant="3" id="eao-BX-8ca"/>
                 <constraint firstItem="oUF-aA-NID" firstAttribute="baseline" secondItem="jQ4-bt-VFs" secondAttribute="baseline" id="h2V-d8-zTN"/>
+                <constraint firstAttribute="bottom" secondItem="XPb-kl-BjV" secondAttribute="bottom" constant="20" id="kSE-jc-2ZZ"/>
                 <constraint firstItem="oUF-aA-NID" firstAttribute="leading" secondItem="jQ4-bt-VFs" secondAttribute="trailing" constant="5" id="oLe-wI-n0K"/>
                 <constraint firstItem="jXn-KV-WQB" firstAttribute="top" secondItem="QYt-FS-lHh" secondAttribute="bottom" constant="8" id="pGj-R1-E8c"/>
                 <constraint firstItem="GyN-lb-9B9" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="wQ0-u9-0uy"/>
