--- a/MacDown/Code/Preferences/MPTerminalPreferencesViewController.xib
+++ b/MacDown/Code/Preferences/MPTerminalPreferencesViewController.xib
@@ -40,7 +40,7 @@
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="jXn-KV-WQB">
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" preferredMaxLayoutWidth="320" translatesAutoresizingMaskIntoConstraints="NO" id="jXn-KV-WQB">
                     <rect key="frame" x="20" y="82" width="324" height="51"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="320" id="4IK-PY-Scf"/>
